LDADD = ../lib/libsmbusb.la

bin_PROGRAMS=smbusb_sbsreport smbusb_bq8030flasher smbusb_r2j240flasher smbusb_m37512flasher smbusb_scan smbusb_comm

smbusb_sbsreport_SOURCES=smbusb_sbsreport.c

smbusb_bq8030flasher_SOURCES=smbusb_bq8030flasher.c

smbusb_r2j240flasher_SOURCES=smbusb_r2j240flasher.c

smbusb_m37512flasher_SOURCES=smbusb_m37512flasher.c

smbusb_scan_SOURCES=smbusb_scan.c

smbusb_comm_SOURCES=smbusb_comm.c